modify comment